@@ -1,8 +1,11 @@
 v0.10.1 - TBD
-- Fixed docker image to work correctly with command line flags
+- Fixed docker image to work correctly with command line flags, include kerberos
+  packages
 - Merged PR #233 - force flag to overwrite existing installation of Px in the
   Windows registry
 - Merged PR #237 - handle pid reuse and support for pwsh
+- Fixed #225, #245 - better handling of PAC file failures and fallback to DIRECT
+  mode when they happen
 
 v0.10.0 - 2025-01-10
 - Replaced ctypes based libcurl backend with pymcurl which uses cffi and includes
